# trustedinstaller_poc

./: Cargo.toml  LICENSE  README.md
src/: main.rs
